--- a/src/modules/Landing/Landing.module.css
+++ b/src/modules/Landing/Landing.module.css
@@ -1,30 +1,49 @@
 @keyframes float_from_above_anim {
-  from {
-    margin-bottom: 100vh;
-  }
-  to {
-    margin: 0;
-  }
+    from {
+        margin-bottom: 100vh;
+    }
+    to {
+        margin: 0;
+    }
 }
 
 @keyframes appear_anim {
-  from {
-    opacity: 0%;
-  }
-  to {
-    opacity: 100%;
-  }
+    from {
+        opacity: 0%;
+    }
+    to {
+        opacity: 100%;
+    }
 }
 
 .landing_header {
-  font-size: 2em;
-  animation: 2.5s float_from_above_anim ease-in-out forwards,
-    5s appear_anim ease-in-out forwards;
-  align-self: center;
+    font-size: 2em;
+    animation:
+        2.5s float_from_above_anim ease-in-out forwards,
+        5s appear_anim ease-in-out forwards;
+    align-self: center;
 }
 
 .landing_container {
-  display: flex;
-  flex-direction: row;
-  height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    gap: 2.5em;
+}
+
+.options_bar {
+    display: flex;
+    flex-direction: row;
+}
+
+.home_button {
+    border-radius: 100% !important;
+    width: 3vw;
+    height: 3vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
 }
