--- a/src/modules/Landing/Landing.module.css
+++ b/src/modules/Landing/Landing.module.css
@@ -36,14 +36,19 @@
 .options_bar {
     display: flex;
     flex-direction: row;
+    gap: 1em;
+    width: 100%;
 }
 
-.home_button {
-    border-radius: 100% !important;
-    width: 3vw;
-    height: 3vw;
+.options_bar > button {
+    width: 100%;
+}
+
+.landing_page_button {
+    opacity: 0%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    animation: 5s 3s appear_anim ease-in-out forwards;
 }
