--- a/src/modules/SignUp/SignUpForm/SignUpForm.module.css
+++ b/src/modules/SignUp/SignUpForm/SignUpForm.module.css
@@ -1,5 +1,15 @@
-.login_form,
-.login_form:focus {
+.sign_up_form_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 1em;
+    border: 1px solid rgba(255, 255, 255, 0.75);
+    border-radius: 1em;
+    gap: 1.5em;
+}
+
+.signup_form,
+.signup_form:focus {
     background-color: transparent !important;
     border-radius: 0 !important;
     border-top: none !important;
@@ -13,25 +23,16 @@
     color: rgba(255, 255, 255, 1) !important;
 }
 
-.login_form::placeholder {
+.signup_form::placeholder {
     color: rgba(255, 255, 255, 1) !important;
     opacity: 25% !important;
 }
 
-.login_form_container {
-    display: flex;
-    flex-direction: column;
-    gap: 2em;
-    padding: 1em;
-    border: 1px solid rgba(0, 0, 0, 0.5);
-    background-color: rgba(0, 0, 0, 0.5);
-    border-radius: 1em;
-}
-
-.login_button {
+.signup_button {
     transition:
         --bs-btn-color 2.5s ease-in-out,
         --bs-btn-border-color 2.5s ease-in-out,
         --bs-btn-active-color 2.5s ease-in-out,
         --bs-btn-active-bg 2.5s ease-in-out;
+    width: 100%;
 }
