--- a/src/modules/SignUp/SignUpForm/SignUpForm.module.css
+++ b/src/modules/SignUp/SignUpForm/SignUpForm.module.css
@@ -2,10 +2,28 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1em;
-    border: 1px solid rgba(255, 255, 255, 0.75);
+    padding: 1.5em;
+    border: 1px solid rgba(128, 128, 128, 0.75);
     border-radius: 1em;
     gap: 1.5em;
+    background-color: rgba(0, 0, 0, 0.35);
+    transition: border-color 1.15s ease-in-out;
+}
+
+.sign_up_form_container_25 {
+    border-bottom-color: rgba(0, 255, 0, 0.75);
+}
+
+.sign_up_form_container_50 {
+    border-left-color: rgba(0, 255, 0, 0.75);
+}
+
+.sign_up_form_container_75 {
+    border-right-color: rgba(0, 255, 0, 0.75);
+}
+
+.sign_up_form_container_100 {
+    border-top-color: rgba(0, 255, 0, 0.75);
 }
 
 .signup_form,
