[landing_page] Moved global styling from globals.css into hook to make for smooth transitions between web pages (don't have to mess with the globals)

--- a/src/common/components/Navbar/Navbar.module.css
+++ b/src/common/components/Navbar/Navbar.module.css
@@ -33,5 +33,5 @@
 .active_link {
     pointer-events: none;
     color: rgba(0, 0, 0, 0.5) !important;
-    text-decoration: underline;
+    text-decoration: underline !important;
 }
