--- a/src/app/cssg/layout.module.css
+++ b/src/app/cssg/layout.module.css
@@ -21,4 +21,8 @@
 
 .cssg_content {
     height: 95%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
