--- a/src/modules/CSSG/CSSG.module.css
+++ b/src/modules/CSSG/CSSG.module.css
@@ -1,7 +1,21 @@
+.cssg_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .cssg_background {
     background-color: #cdb4db;
 }
 
 .cssg_header {
     font-size: 3em;
+    letter-spacing: 0.05em;
+    text-decoration: underline;
+}
+
+.cssg_description {
+    padding-right: 25%;
+    padding-left: 25%;
+    font-size: 1.5em;
 }
