--- a/src/modules/CSSG/About/About.module.css
+++ b/src/modules/CSSG/About/About.module.css
@@ -1,22 +1,17 @@
 .title {
+    font-size: 5em;
+}
+
+.about_container {
+    display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: space-between;
-    padding: 25px 10%;
-    color: blue;
-    text-align: center;
+    justify-content: center;
+    gap: 1em;
 }
 
-.logo{
-    cursor: pointer;
-    margin-right: auto;
-    width: 2px;
-    height: auto;
-}
-
-.about-image {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    height: 40%;
-    width: 35%;
+.description {
+    font-size: 1.25em;
+    padding-left: 10%;
+    padding-right: 10%;
 }
