[landing_page] Added EBoard page

--- a/src/common/components/Divider/Divider.module.css
+++ b/src/common/components/Divider/Divider.module.css
@@ -2,3 +2,8 @@
     border: 1px solid rgba(0, 0, 0, 0.5);
     height: 75%;
 }
+
+.vertical_divider {
+    border: 1px solid rgba(0, 0, 0, 0.5);
+    width: 75%;
+}
