--- a/src/app/cssg/layout.module.css
+++ b/src/app/cssg/layout.module.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     height: 100%;
     width: 100%;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 .cssg_navbar {
